Deleted all stylesheets in one

--- a/Attraktionen.html
+++ b/Attraktionen.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./mvp.css">
-  <link rel="stylesheet" href="./attraktionen.css">
+  <link rel="stylesheet" href="./stylesheet.css">
   <title>Attraktionen</title>
 </head>
 
-<body>
+<body class="body-attraktionen">
 
   <header class="header">
     <div class="website-name">SwissFish.zoo</div>
@@ -25,11 +25,11 @@
     
   </header>
 
-  <main>
+  <main class="main-attraktionen">
     <!--Hecht attraktion-->
-    <div class="card">
+    <div class="card-attraktionen">
       <img src="./img/füttern-attraktionen.png" alt="Bildbeschreibung">
-      <div class="card-text">
+      <div class="card-text-attraktionen">
         <h2>Füttern von Fischen: </h2>
         <p>Im Zoo gibt es auch die Möglichkeit, Fische zu füttern.</p> <p>Sie können an einem Teich oder
           Aquarium stehen und den Fischen Futter geben.</p><p>Sie werden beobachten, wie die Fische gierig nach dem Futter
@@ -42,9 +42,9 @@
 
 
     <!--Film attraktion-->
-    <div class="card">
+    <div class="card-attraktionen">
       <img src="./img/grill-attraktion.png" alt="Bildbeschreibung" width="350px" height="200.01px">
-      <div class="card-text">
+      <div class="card-text-attraktionen">
         <h2>Grillmöglichkeit im Zoo: </h2>
         <p>Im Zoo gibt es eine wunderschöne Wiese, auf der Sie grillen und picknicken können.
           <p>Der Grillplatz bietet eine entspannte und natürliche Atmosphäre, um mit Freunden und Familie einen Tag im Zoo</p>
@@ -55,9 +55,9 @@
 
 
     <!--Grill attraktion-->
-    <div class="card">
+    <div class="card-attraktionen">
       <img src="./img/film-attraktionen.png" alt="Bildbeschreibung" width="350px" height="auto">
-      <div class="card-text">
+      <div class="card-text-attraktionen">
         <h2>Film über Raubfische: </h2>
         <p>Im Zoo wird ein spannender Film über Raubfische gezeigt. <p>Der Film gibt Einblicke in das
           Leben von Haien, Barrakudas, Welsen und anderen Raubfischen.</p> Sie können lernen, wie sie sich jagen, fressen
@@ -76,6 +76,7 @@
       <p>|</p>
       <p><a target="_blank" href="Datenschutz.html">Datenschutz</a></p>
     </div>
+  
   </footer>
 
 </body>
