--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SwissFisch.zoo Navbar</title>
-  <link rel="stylesheet" href="mvp.css">
-  <link rel="stylesheet" href="datenschutz.css">
+  <title>Datenschutz</title>
+  <link rel="stylesheet" href="./mvp.css">
+  <link rel="stylesheet" href="./stylesheet.css">
 
 </head>
-<header>
+<header class="header-datenschutz">
   <h1>Datenschutz</h1>
 </header>
-<main>
-  <section>
+<main class="main-datenschutz">
+  <section class="section-datenschutz">
     <h2>Datenschutzerklärung</h2>
     <p>Hiermit informieren wir Sie über die Verarbeitung Ihrer personenbezogenen Daten durch uns und die Ihnen nach dem
       Datenschutzrecht zustehenden Rechte.</p>
