--- a/Egli.html
+++ b/Egli.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./mvp.css">
-  <link rel="stylesheet" href="./fisch.css">
+  <link rel="stylesheet" href="./stylesheet.css">
   <title>Egli</title>
 </head>
 
-<body>
+<body class="body-fisch">
   <header class="header">
     <div class="website-name">SwissFish.zoo</div>
     <nav class="navigation">
@@ -23,7 +23,7 @@
     </nav>
     
   </header>
-  <main>
+  <main class="main-fisch">
     <div class="fischBio-container">
     <aside class="fishprogress-img">
       <img alt="decoration progress-icon" src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
@@ -69,9 +69,9 @@
 </div>
     <aside class="über-fisch-container">
       <!--Über Fisch-->
-      <div class="card">
+      <div class="card-fisch">
         <img alt="Egli Bild"  src="./img/egli.jpg">
-        <div class="card-text">
+        <div class="card-text-fisch">
           <p>Das Egli ist auch unter dem Namen Barsch bekannt und gehört zur Familie der Sonnenbarsche. Es ist ein
             Süßwasserfisch und kommt in vielen Gewässern Europas vor. Der Egli hat einen stromlinienförmigen Körper und
             ist grünlich oder bräunlich gefärbt. Er ernährt sich von kleinen Fischen, Krebstieren und Insektenlarven.
@@ -81,17 +81,17 @@
     </aside>
   </main>
 
-  <footer>
+   <footer>
     <div class="footer-logo">
       <h2>SwissFish.zoo</h2>
-      <img alt="Logo Icon" src="./img/logo.png" width="25px" height="auto">
+      <img alt="Logo Icon" src="./img/logo.png"  width="25px" height="auto">
     </div>
     <div class="footer-impdat">
       <p><a target="_blank" href="Impressum.html">Impressum</a></p>
       <p>|</p>
       <p><a target="_blank" href="Datenschutz.html">Datenschutz</a></p>
     </div>
-
+  
   </footer>
 </body>
 
