--- a/Forelle.html
+++ b/Forelle.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./mvp.css">
-  <link rel="stylesheet" href="./fisch.css">
+  <link rel="stylesheet" href="./stylesheet.css">
   <title>Forelle</title>
 </head>
 
-<body>
+<body class="body-fisch">
   <header class="header">
     <div class="website-name">SwissFish.zoo</div>
     <nav class="navigation">
@@ -23,7 +23,7 @@
     </nav>
     
   </header>
-  <main>
+  <main class="main-fisch">
 
     <div class="fischBio-container">
     <aside class="fishprogress-img">
@@ -71,9 +71,9 @@
 
     <aside class="über-fisch-container">
       <!--Über Fisch-->
-      <div class="card">
+      <div class="card-fisch">
         <img alt="Forelle Bild" src="./img/forelle.jpg" >
-        <div class="card-text">
+        <div class="card-text-fisch">
           <p> Die Forelle ist ein beliebter Speisefisch und gehört zur Familie der Lachsfische. Sie hat einen schlanken
             Körper und ist blau-grau bis grün-bräunlich gefärbt. Forellen leben in klaren und kalten Gewässern und
             ernähren sich von Insektenlarven, kleinen Fischen und Krebstieren.</p>
@@ -92,7 +92,7 @@
       <p>|</p>
       <p><a target="_blank" href="Datenschutz.html">Datenschutz</a></p>
     </div>
-
+  
   </footer>
 </body>
 
