--- a/Forellenbarsch.html
+++ b/Forellenbarsch.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./mvp.css">
-  <link rel="stylesheet" href="./fisch.css">
+  <link rel="stylesheet" href="./stylesheet.css">
   <title>Forellenbarsch</title>
 </head>
 
-<body>
+<body class="body-fisch">
   <header class="header">
     <div class="website-name">SwissFish.zoo</div>
     <nav class="navigation">
@@ -23,7 +23,7 @@
     </nav>
     
   </header>
-  <main>
+  <main class="main-fisch">
     <div class="fischBio-container">
     <aside class="fishprogress-img">
       <img alt="decoration progress-icon" src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
@@ -69,9 +69,9 @@
 </div>
     <aside class="über-fisch-container">
       <!--Über Fisch-->
-      <div class="card">
+      <div class="card-fisch">
         <img alt="Forellenbarsch Bild"  src="./img/forellenbarsch.jpg">
-        <div class="card-text">
+        <div class="card-text-fisch">
           <p> Der Forellenbarsch ist ebenfalls ein Süßwasserfisch und gehört zur Familie der Sonnenbarsche. Er hat eine
             silbrige bis grüne Farbe und ist an den Flanken mit dunklen Flecken versehen. Der Forellenbarsch ernährt
             sich von kleinen Fischen und Krebstieren und ist in vielen Gewässern Europas und Nordamerikas verbreitet.
@@ -91,7 +91,7 @@
       <p>|</p>
       <p><a target="_blank" href="Datenschutz.html">Datenschutz</a></p>
     </div>
-
+  
   </footer>
 </body>
 
