--- a/Hecht.html
+++ b/Hecht.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./mvp.css">
-  <link rel="stylesheet" href="./fisch.css">
+  <link rel="stylesheet" href="./stylesheet.css">
   <title>Hecht</title>
 </head>
 
-<body>
+<body class="body-fisch">
 
   <header class="header">
     <div class="website-name">SwissFish.zoo</div>
@@ -24,7 +24,7 @@
     </nav>
     
   </header>
-  <main>
+  <main class="main-fisch">
     <div class="fischBio-container">
     <aside class="fishprogress-img">
       <img alt="decoration progress-icon" src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
@@ -71,9 +71,9 @@
 
     <aside class="über-fisch-container">
       <!--Über Fisch-->
-      <div class="card">
+      <div class="card-fisch">
         <img alt="Hecht Bild" src="./img/hecht-attraktion.jpg" >
-        <div class="card-text">
+        <div class="card-text-fisch">
           <p> Der Hecht ist ein großer Süßwasserfisch und gehört zur Familie der Hechte. Er hat einen langen, schlanken
             Körper und ist grünlich bis graubraun gefärbt. Hechte sind Raubfische und ernähren sich vor allem von
             Fischen, aber auch von Fröschen und Wasservögeln. Sie kommen in vielen Gewässern Europas und Nordamerikas
@@ -86,14 +86,14 @@
   <footer>
     <div class="footer-logo">
       <h2>SwissFish.zoo</h2>
-      <img alt="Logo Icon" src="./img/logo.png" width="25px" height="auto">
+      <img alt="Logo Icon" src="./img/logo.png"  width="25px" height="auto">
     </div>
     <div class="footer-impdat">
       <p><a target="_blank" href="Impressum.html">Impressum</a></p>
       <p>|</p>
       <p><a target="_blank" href="Datenschutz.html">Datenschutz</a></p>
     </div>
-
+  
   </footer>
 </body>
 
