--- a/Impressum.html
+++ b/Impressum.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SwissFisch.zoo Navbar</title>
+  <title>Impressum</title>
   <link rel="stylesheet" href="mvp.css">
-  <link rel="stylesheet" href="impressum.css">
+  <link rel="stylesheet" href="stylesheet.css">
 
-</head><header>
+</head><header class="header-impressum">
   <h1>Impressum</h1>
 </header>
-<main>
-  <section>
+<main class="main-impressum">
+  <section class="section-impressum">
     <p>Name des Unternehmens: SwissFish.zoo</p>
     <p>Straße und Hausnummer: Zooerstrasse 23</p>
     <p>Ort: Zürich </p>
