--- a/Wels.html
+++ b/Wels.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./mvp.css">
-  <link rel="stylesheet" href="./fisch.css">
+  <link rel="stylesheet" href="./stylesheet.css">
   <title>Wels</title>
 </head>
 
-<body>
+<body class="body-fisch">
   <header class="header">
     <div class="website-name">SwissFish.zoo</div>
     <nav class="navigation">
@@ -23,7 +23,7 @@
     </nav>
     
   </header>
-  <main>
+  <main class="main-fisch">
     <div class="fischBio-container">
     <aside class="fishprogress-img">
       <img alt="decoration progress-icon" src="./img/fisch-img.png" width="auto" height="670px">
@@ -70,9 +70,9 @@
 
     <aside class="über-fisch-container">
       <!--Über Fisch-->
-      <div class="card">
+      <div class="card-fisch">
         <img alt="Wels Bild"  src="./img/wels.jpg" >
-        <div class="card-text">
+        <div class="card-text-fisch">
           <p>Der Wels ist ein großer Süßwasserfisch und gehört zur Familie der Welse. Er hat einen langen,
             stromlinienförmigen Körper und ist dunkelgrün bis schwarz gefärbt. Welse sind Raubfische und ernähren sich
             vor allem von Fischen, aber auch von Fröschen und Wasservögeln. Sie kommen in vielen Gewässern Europas und
@@ -92,7 +92,7 @@
       <p>|</p>
       <p><a target="_blank" href="Datenschutz.html">Datenschutz</a></p>
     </div>
-
+  
   </footer>
 </body>
 
