--- a/Fischarten.html
+++ b/Fischarten.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./mvp.css">
-    <link rel="stylesheet" href="./fischarten-stylesheet.css">
+    <link rel="stylesheet" href="./stylesheet.css">
   <title>Fischarten</title>
 </head>
 
 
-<body>
+<body class="body-fischarten">
  
   <header class="header">
     <div class="website-name">SwissFish.zoo</div>
@@ -26,7 +26,7 @@
   </header>
 
 
-<main>
+<main class="main-fischarten">
 
 <div class="teil-links">
     <div class="fish-oben">
@@ -67,7 +67,7 @@
 <footer>
   <div class="footer-logo">
     <h2>SwissFish.zoo</h2>
-    <img alt="Logo Icon" src="./img/logo.png" width="25px" height="auto">
+    <img alt="Logo Icon" src="./img/logo.png"  width="25px" height="auto">
   </div>
   <div class="footer-impdat">
     <p><a target="_blank" href="Impressum.html">Impressum</a></p>
