--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./mvp.css">
-  <link rel="stylesheet" href="./home-stylesheet.css">
+  <link rel="stylesheet" href="./stylesheet.css">
 
   <title>Home</title>
 </head>
 
-<body>
+<body class="body-home">
   <header class="header">
     <div class="website-name">SwissFish.zoo</div>
     <nav class="navigation">
@@ -25,11 +25,11 @@
     
   </header>
 
-  <main>
+  <main class="main-home">
 
-    <div class="main-section">
+    <div class="main-section-home">
 
-      <div class="left-container">
+      <div class="left-container-home">
         <img alt="Homefisch Bild" src="./img/aboutus.jpg" width="350px" height="auto">
         <div class="überuns-text">
           <!--Über uns-->
